@startuml
skinparam classAttributeIconSize 0
hide methods
hide circle
left to right direction


class Subscription {
    id
    startDate
    endDate
}

class User {
    id
    name
    email
    country
}

class Device {
    id
    macAddress
    name
    description
}

class DeviceImage {
    id
    prefix
    fileName
    fileDownloadUri
    contentType
    fileSize
}

Subscription "1" -- "0..1" User : belongs to >
Subscription "1" -- "0..6" Device : has >
Device "1" -- "1" DeviceImage : has >

@enduml

